--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,5 @@
+# create a .env for different env's
+
 DB_USER=postgres
 DB_PASSWORD=secret
 DB_NAME=observe
@@ -6,3 +8,5 @@ DB_HOST=db
 DB_PORT=5432
 
 DOMAIN=http://localhost:8080
+DIR_STATIC=
+DIR_TEMPLATE=
