--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -5,14 +5,24 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
-  rules:
-    - host: kubernetes.local
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: go-observe-service
-                port:
-                  number: 8080
+  tls:
+  - hosts:
+      - kubernetes.local
+    secretName: test-cert
+  defaultBackend:
+    service:
+      name: go-observe-service
+      port:
+        number: 8080
+
+#  rules:
+#    - host: kubernetes.local
+#      http:
+#        paths:
+#          - path: /
+#            pathType: Prefix
+#            backend:
+#              service:
+#                name: go-observe-service
+#                port:
+#                  number: 8080
